--- a/calcular.html
+++ b/calcular.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Página Inicial</title>
+    <title>Calcular Pedido</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,23 +11,27 @@
       crossorigin="anonymous"
     />
     <script>
-        function calcularSoma() {
-            const params = new URLSearchParams(window.location.search);
-            let soma = 0;
+      function calcularTotalPedido() {
+        const params = new URLSearchParams(window.location.search);
+        let totalCompa = 0;
+        params.forEach((value) => {
+          totalCompa += Number(value);
+        });
 
-            // Itera sobre as chaves dos parâmetros
-            for (const key of params.keys()) {
-                const valor = parseFloat(params.get(key));
-                soma += isNaN(valor) ? 0 : valor; // Somente adiciona se for um número
-            }
+        const totalFormatado = totalCompa.toLocaleString("pt-BR", {
+          style: "currency",
+          currency: "BRL",
+        });
 
-            document.getElementById("resultado").innerText = "Total: " + soma;
-        }
+        document.getElementById("total").innerText =
+          "Total da pedido: " + totalFormatado;
+      }
 
-        window.onload = calcularSoma;
+      // Executa a função quando a página carrega
+      window.onload = calcularTotalPedido;
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Cabeçalho -->
     <nav class="navbar bg-danger navbar-expand-sm" data-bs-theme="dark">
       <div class="container">
@@ -48,7 +52,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Página Inicial</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sabores.html">Sabores</a>
@@ -66,8 +72,10 @@
     <!-- FIM Cabeçalho -->
 
     <div class="container mt-5">
-        <h1 class="text-center">Soma de Valores Recebidos</h1>
-        <p class="text-center" id="resultado" style="font-size: 1.5rem;">Total: 0</p>
+      <h1 class="text-center fs-1">Soma de Valores das Pizzas</h1>
+      <p class="text-center fs-3" id="total">
+        Total da pedido: R$ 0,00
+      </p>
     </div>
 
     <script
@@ -75,5 +83,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
