--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li class="nav-item">
               <a class="nav-link" href="maisVendidas.html">Mais vendidas</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobre.html">Sobre</a>
+            </li>
           </ul>
         </div>
       </div>
