--- a/sobre.html
+++ b/sobre.html
@@ -32,64 +32,27 @@
             <a class="nav-link" href="calcular.html">Calcular</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="maisVendidas.html">Mais vendidas</a>
+            <a class="nav-link" href="maisVendidas.html">Mais vendidas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
+            <a class="nav-link active" href="sobre.html">Sobre</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- FIM Cabeçalho -->
-  <!--GRAFICO DE VENDAS-->
-  <canvas id="meuGrafico"
-    style="aspect-ratio: 16/9; width: 100%; height: 50%; padding: 20px; border: 1px solid #ddd; border-radius: 10px"></canvas>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <STRong><h2 style="color: rgb(205, 71, 71);text-align: center;margin-top: 5%; ">Bem-vindo à Pizzaria Los Hemanos Venha Fazer Seu Pedido</h2> <P style="color: rgb(252, 166, 55); text-align: center; align-items: center; margin-left: 20%; margin-right: 20%; margin-top: 5%;font-size: 20px; line-height: 2; " > onde a paixão por pizzas se encontra com a excelência no atendimento! Aqui, cada fatia conta uma história de sabores irresistíveis, preparados com os ingredientes mais frescos e de alta qualidade.
 
-  <script>
-    const ctx = document.getElementById('meuGrafico').getContext('2d');
-    const meuGrafico = new Chart(ctx, {
-      type: 'pie',
-      data: {
-        labels: ['Mussarela', 'Calabresa', 'Marguerita', '4 Queijos', 'Pepperoni'],
-        datasets: [{
-          label: 'Vendas',
-          data: [150, 100, 30, 50, 80],
-        }]
-      },
-      options: {
-        plugins: {
-          tooltip: {
-            callbacks: {
-              label: context => {
-                return ' R$ ' + context.parsed.toLocaleString('pt-BR', {
-                  minimumFractionDigits: 2,
-                  maximumFractionDigits: 2
-                });
-              }
-            }
-          },
-          legend: {
-            position: 'left',
-            labels: {
-              font: { size: 18 }
-            },
-          },
-          title: {
-            display: true,
-            text: 'Taxa De Vendas Por Semana',
-            font: { size: 26 },
-            padding: { bottom: 30 }
-          }
-        },
-        responsive: false,
-        maintainAspectRatio: true
-      }
-    });
-  </script>
-  <!--GRAFICO DE VENDAS-->
+    Nossa pizzaria oferece uma variedade de opções que agradam a todos os paladares, desde os clássicos, como Mussarela e Calabresa, até criações exclusivas como a pizza de Frango com Catupiry e a Marguerita com um toque especial. Seja qual for a sua escolha, garantimos que cada mordida será uma experiência memorável.
+    
+    Além dos sabores incríveis, nosso atendimento é um dos pontos fortes da casa. Nossa equipe é dedicada, simpática e pronta para tornar a sua visita ainda mais agradável. Priorizamos um serviço rápido e eficiente, com um ambiente acolhedor que faz com que cada cliente se sinta especial.
+    
+    Seja para um jantar em família, um encontro com amigos ou um pedido para viagem, a Pizzaria Delícia está sempre pronta para surpreender você com o melhor da culinária italiana e um atendimento que faz a diferença. Venha nos visitar e descubra porque somos a melhor opção em sabor e serviço na região! 🍕
+
+    <h2 style="color: rgb(205, 71, 71);text-align: center;margin-top: 5%;">Localizados Pertinho de você : rua santa luzia N:327</h2>
+</STRong></P>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
