--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         </div>
       </div>
     </div>
+
+    <footer class="mt-5">
+      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+      <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
+    </footer>
     <!-- FIM Modal de Boas vindas-->
     <script src="js/index.js"></script>
     <script
