--- a/sabores.html
+++ b/sabores.html
@@ -64,6 +64,11 @@
     </section>
     <!-- FIM Container de sabores -->
 
+    <footer class="mt-5">
+      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+      <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
+    </footer>
+
     <script src="js/pizzas.js"></script>
     <script src="js/exibirPizzas.js"></script>
     <script
