--- a/sobre.html
+++ b/sobre.html
@@ -1,61 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Sobre</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Página Inicial</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-</head>
-
-<body>
-  <!-- Cabeçalho -->
-  <nav class="navbar bg-danger navbar-expand-sm" data-bs-theme="dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/pizza.png" alt="Logo Pizza" />
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sabores.html">Sabores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="calcular.html">Calcular</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="maisVendidas.html">Mais vendidas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="sobre.html">Sobre</a>
-          </li>
-        </ul>
+  <body>
+    <!-- Cabeçalho -->
+    <nav class="navbar bg-danger navbar-expand-sm" data-bs-theme="dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/pizza.png" alt="Logo Pizza" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Página Inicial</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sabores.html">Sabores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="calcular.html">Calcular</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="maisVendidas.html">Mais vendidas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="sobre.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!-- FIM Cabeçalho -->
+    </nav>
+    <!-- FIM Cabeçalho -->
 
-  <STRong><h2 style="color: rgb(205, 71, 71);text-align: center;margin-top: 5%; ">Bem-vindo à Pizzaria Los Hemanos Venha Fazer Seu Pedido</h2> <P style="color: rgb(252, 166, 55); text-align: center; align-items: center; margin-left: 20%; margin-right: 20%; margin-top: 5%;font-size: 20px; line-height: 2; " > onde a paixão por pizzas se encontra com a excelência no atendimento! Aqui, cada fatia conta uma história de sabores irresistíveis, preparados com os ingredientes mais frescos e de alta qualidade.
+    <strong>
+      <h2 style="color: rgb(205, 71, 71); text-align: center; margin-top: 5%">
+        Bem-vindo à Pizzaria Los Hemanos Venha Fazer Seu Pedido
+      </h2>
+      <p
+        style="
+          color: rgb(252, 166, 55);
+          text-align: center;
+          align-items: center;
+          margin-left: 20%;
+          margin-right: 20%;
+          margin-top: 5%;
+          font-size: 20px;
+          line-height: 2;
+        "
+      >
+        onde a paixão por pizzas se encontra com a excelência no atendimento!
+        Aqui, cada fatia conta uma história de sabores irresistíveis, preparados
+        com os ingredientes mais frescos e de alta qualidade. Nossa pizzaria
+        oferece uma variedade de opções que agradam a todos os paladares, desde
+        os clássicos, como Mussarela e Calabresa, até criações exclusivas como a
+        pizza de Frango com Catupiry e a Marguerita com um toque especial. Seja
+        qual for a sua escolha, garantimos que cada mordida será uma experiência
+        memorável. Além dos sabores incríveis, nosso atendimento é um dos pontos
+        fortes da casa. Nossa equipe é dedicada, simpática e pronta para tornar
+        a sua visita ainda mais agradável. Priorizamos um serviço rápido e
+        eficiente, com um ambiente acolhedor que faz com que cada cliente se
+        sinta especial. Seja para um jantar em família, um encontro com amigos
+        ou um pedido para viagem, a Pizzaria Delícia está sempre pronta para
+        surpreender você com o melhor da culinária italiana e um atendimento que
+        faz a diferença. Venha nos visitar e descubra porque somos a melhor
+        opção em sabor e serviço na região! 🍕
+      </p>
+      <h2 style="color: rgb(205, 71, 71); text-align: center; margin-top: 5%">
+        Localizados Pertinho de você : rua santa luzia N:327
+      </h2>
+    </strong>
 
-    Nossa pizzaria oferece uma variedade de opções que agradam a todos os paladares, desde os clássicos, como Mussarela e Calabresa, até criações exclusivas como a pizza de Frango com Catupiry e a Marguerita com um toque especial. Seja qual for a sua escolha, garantimos que cada mordida será uma experiência memorável.
-    
-    Além dos sabores incríveis, nosso atendimento é um dos pontos fortes da casa. Nossa equipe é dedicada, simpática e pronta para tornar a sua visita ainda mais agradável. Priorizamos um serviço rápido e eficiente, com um ambiente acolhedor que faz com que cada cliente se sinta especial.
-    
-    Seja para um jantar em família, um encontro com amigos ou um pedido para viagem, a Pizzaria Delícia está sempre pronta para surpreender você com o melhor da culinária italiana e um atendimento que faz a diferença. Venha nos visitar e descubra porque somos a melhor opção em sabor e serviço na região! 🍕
-
-    <h2 style="color: rgb(205, 71, 71);text-align: center;margin-top: 5%;">Localizados Pertinho de você : rua santa luzia N:327</h2>
-</STRong></P>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
+    <footer class="mt-5">
+      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+      <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
