--- a/maisVendidas.html
+++ b/maisVendidas.html
@@ -1,98 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Mais vendidos</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Página Inicial</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-</head>
-
-<body>
-  <!-- Cabeçalho -->
-  <nav class="navbar bg-danger navbar-expand-sm" data-bs-theme="dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/pizza.png" alt="Logo Pizza" />
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sabores.html">Sabores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="calcular.html">Calcular</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="maisVendidas.html">Mais vendidas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
-          </li>
-        </ul>
+  <body>
+    <!-- Cabeçalho -->
+    <nav class="navbar bg-danger navbar-expand-sm" data-bs-theme="dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/pizza.png" alt="Logo Pizza" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Página Inicial</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sabores.html">Sabores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="calcular.html">Calcular</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="maisVendidas.html"
+                >Mais vendidas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobre.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!-- FIM Cabeçalho -->
-  <!--GRAFICO DE VENDAS-->
-  <canvas id="meuGrafico"
-    style="aspect-ratio: 16/9; width: 100%; height: 50%; padding: 20px; border: 1px solid #ddd; border-radius: 10px"></canvas>
+    </nav>
+    <!-- FIM Cabeçalho -->
+    <!--GRAFICO DE VENDAS-->
+    <canvas
+      id="meuGrafico"
+      style="
+        aspect-ratio: 16/9;
+        width: 100%;
+        height: 50%;
+        padding: 20px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+      "
+    ></canvas>
+    <footer class="mt-5">
+      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+      <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <script>
-    const ctx = document.getElementById('meuGrafico').getContext('2d');
-    const meuGrafico = new Chart(ctx, {
-      type: 'pie',
-      data: {
-        labels: ['Mussarela', 'Calabresa', 'Marguerita', '4 Queijos', 'Pepperoni'],
-        datasets: [{
-          label: 'Vendas',
-          data: [150, 100, 30, 50, 80],
-        }]
-      },
-      options: {
-        plugins: {
-          tooltip: {
-            callbacks: {
-              label: context => {
-                return ' R$ ' + context.parsed.toLocaleString('pt-BR', {
-                  minimumFractionDigits: 2,
-                  maximumFractionDigits: 2
-                });
-              }
-            }
-          },
-          legend: {
-            position: 'left',
-            labels: {
-              font: { size: 18 }
-            },
-          },
-          title: {
-            display: true,
-            text: 'Taxa De Vendas Por Semana',
-            font: { size: 26 },
-            padding: { bottom: 30 }
-          }
-        },
-        responsive: false,
-        maintainAspectRatio: true
-      }
-    });
-  </script>
-  <!--GRAFICO DE VENDAS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script src="js/graficoVendas.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
