--- a/calcular.html
+++ b/calcular.html
@@ -54,16 +54,16 @@
       </div>
     </nav>
     <!-- FIM Cabeçalho -->
-
-    <div class="container mt-5">
-      <h1 class="text-center fs-1">Soma de Valores das Pizzas</h1>
-      <p class="text-center fs-3" id="total">
-        Total da pedido: R$ 0,00
-      </p>
+    <div class="container" style="min-height: 60vh">
+      <div class="container mt-5">
+        <h1 class="text-center fs-1">Soma de Valores das Pizzas</h1>
+        <p class="text-center fs-3" id="total">Total da pedido: R$ 0,00</p>
+      </div>
     </div>
-
-    <footer class="mt-5">
-      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+    <footer class="mt-5 border-top border-danger">
+      <p class="text-center mt-4">
+        Site feito com <span class="text-danger">♥</span> por:
+      </p>
       <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
     </footer>
 
