--- a/maisVendidas.html
+++ b/maisVendidas.html
@@ -57,19 +57,24 @@
     </nav>
     <!-- FIM Cabeçalho -->
     <!--GRAFICO DE VENDAS-->
-    <canvas
-      id="meuGrafico"
-      style="
-        aspect-ratio: 16/9;
-        width: 100%;
-        height: 50%;
-        padding: 20px;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-      "
-    ></canvas>
-    <footer class="mt-5">
-      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+    <div class="container" style="min-height: 60vh">
+      <canvas
+        class="mt-5"
+        id="meuGrafico"
+        style="
+          aspect-ratio: 16/9;
+          width: 100%;
+          height: 50%;
+          padding: 20px;
+          border: 1px solid #ddd;
+          border-radius: 10px;
+        "
+      ></canvas>
+    </div>
+    <footer class="mt-5 border-top border-danger">
+      <p class="text-center mt-4">
+        Site feito com <span class="text-danger">♥</span> por:
+      </p>
       <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
     </footer>
 
