--- a/sabores.html
+++ b/sabores.html
@@ -55,7 +55,7 @@
     <!-- FIM Cabeçalho -->
 
     <!-- Container de sabores -->
-    <section class="container mt-4">
+    <section class="container mt-4" style="min-height: 60vh">
       <h1 class="fs-2">Sabores:</h1>
       <div
         class="row row-cols-1 row-cols-md-3 g-5 m-4"
@@ -64,8 +64,10 @@
     </section>
     <!-- FIM Container de sabores -->
 
-    <footer class="mt-5">
-      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+    <footer class="mt-5 border-top border-danger">
+      <p class="text-center mt-4">
+        Site feito com <span class="text-danger">♥</span> por:
+      </p>
       <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
     </footer>
 
