--- a/sobre.html
+++ b/sobre.html
@@ -93,8 +93,10 @@
       </h2>
     </strong>
 
-    <footer class="mt-5">
-      <p class="text-center">Site feito com <span class="text-danger">♥</span> por:</p>
+    <footer class="mt-5 border-top border-danger">
+      <p class="text-center mt-4">
+        Site feito com <span class="text-danger">♥</span> por:
+      </p>
       <p class="text-center">André Pereira Marques e Brian Cruz Galdino</p>
     </footer>
     <script
